--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "aos": "^2.3.4",
     "bad-words": "^4.0.0",
     "fade": "^0.2.0",
     "framer-motion": "^12.23.3",
     "gsap": "3.8.0",
     "leo-profanity": "^1.8.0",
-    "next": "^15.3.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "lucide-react": "^0.525.0",
+    "next": "^15.4.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-rough-notation": "^1.0.5",
     "sass": "^1.32.12",
@@ -35,5 +37,4 @@
     "tailwindcss": "^3.1.4",
     "typescript": "^4.2.4"
   }
- 
 }
