--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
   "devDependencies": {
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.4",
+    "@typescript-eslint/parser": "^4.33.0",
     "autoprefixer": "^10.4.7",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^12.2.5",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4",
-    "typescript": "^4.2.4"
+    "typescript": "^4.9.5"
   }
 }
