--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -28,6 +29,7 @@
     "zustand": "^4.5.7"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.4",
     "@typescript-eslint/parser": "^4.33.0",
