--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "@types/aos": "^3.0.7",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.4",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.56.0",
     "eslint-config-next": "^12.2.5",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@typescript-eslint/parser": "^7.18.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0"
   }
 }
